--- a/client/src/style/globals.css
+++ b/client/src/style/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import '../../src/style/components-css//cards.css';
+
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -13,12 +16,21 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
+.bodyPadding {
+    /*
+      .bodyPadding: Padding padrão do body
+    */
+    @apply px-4 sm:px-6 lg:px-8;
+}
+
+
 .asideBar {
-  @apply flex flex-col order-1 md:order-2 w-full md:w-1/3 h-auto text-center  py-6 md:pt-16 lg:pt-24 md:hidden lg:block space-y-4 md:space-y-8 items-center justify-center px-10  rounded-r-none md:rounded-r-3xl border-l-[1px] border-Cerulean bg-gradient-to-r from-PrussianBlue to-Cerulean 
+  @apply flex flex-col order-1 md:order-2 w-full md:w-1/3 h-auto text-center  py-6 md:pt-16 lg:pt-24 md:hidden lg:block space-y-4 md:space-y-8 items-center justify-center px-10  rounded-r-none md:rounded-r-3xl border-l-[1px] border-Cerulean bg-gradient-to-r from-PrussianBlue to-Cerulean
 }
 
 .conteinerSection {
-  @apply flex flex-col md:flex-row w-auto h-auto justify-center m-0 md:m-20 lg:m-28 lg:mt-10 
+  @apply flex flex-col md:flex-row w-auto h-auto justify-center m-0 md:m-20 lg:m-28 lg:mt-10
 }
 
 .containerForms {
